@@ -28,6 +28,7 @@
     * Make RESET_PRINTER clear the command queue and have priority that way
     * Made the app stop itself faster
     * Use M400 instead of G4 for printer queue syncing
+    * Added printer name and location validation to wizard
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
